--- a/sample/index.html
+++ b/sample/index.html
@@ -22,7 +22,9 @@
 
 <script src="../build/ckeditor.js"></script>
 <script>
-	ClassicEditor.create( document.querySelector( '#editor' ) )
+	ClassicEditor.create( document.querySelector( '#editor' ), {
+    language: 'sv'
+  } )
 		.then( editor => {
 			window.editor = editor;
 		} )
